# aineko-plugins

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  versions.json  yamllint.yaml
.circleci/: config.yml
aineko-plugins-fastapi-server/: README.md  pyproject.toml
aineko-plugins-fastapi-server/aineko_plugins/nodes/fastapi_server/: __init__.py  main.py
aineko-plugins-fastapi-server/tests/: conftest.py  test_fastapi.py  test_fastapi.yml
aineko-plugins-http-poller/: README.md  pyproject.toml
aineko-plugins-http-poller/aineko_plugins/nodes/http_poller/: __init__.py  http_poller.py
aineko-plugins-http-poller/tests/: test_http_poller.yml
aineko-plugins-nodes-fastapi-server/aineko_plugins/nodes/fastapi_server/: __init__.py  health.py  main.py
aineko-plugins-nodes-fastapi-server/tests/: main.py  test_fastapi.yml
aineko-plugins-nodes-http-poller/: README.md  pyproject.toml
aineko-plugins-nodes-http-poller/aineko_plugins/nodes/http_poller/: http_poller.py
aineko-plugins-nodes-http-poller/tests/: test_http_poller.yml
aineko-plugins-nodes-websocket-client/: pyproject.toml
aineko-plugins-nodes-websocket-client/aineko_plugins/nodes/websocket_client/: websocket_client.py
aineko-plugins-nodes-websocket-client/tests/: test_websocket_client.yml
aineko-plugins-websocket-client/: README.md  pyproject.toml
aineko-plugins-websocket-client/aineko_plugins/nodes/websocket_client/: __init__.py  websocket_client.py
aineko-plugins-websocket-client/tests/: test_websocket_client.py  test_websocket_client.yml
datasets/aineko-plugins-datasets-postgres/: README.md  pyproject.toml
datasets/aineko-plugins-datasets-postgres/aineko_plugins/datasets/postgres/: __init__.py  postgres.py
datasets/aineko-plugins-datasets-postgres/tests/: conftest.py  postgres.py  test_postgres.py
datasets/aineko-plugins-datasets-ray/: README.md  pyproject.toml
datasets/aineko-plugins-datasets-ray/aineko_plugins/datasets/ray/: __init__.py  main.py  nodes.py
datasets/aineko-plugins-datasets-ray/tests/: pipeline.yml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/nodes/fastapi-server/: index.html
dev/nodes/http-poller/: index.html
dev/nodes/websocket-client/: index.html
dev/search/: search_index.json
docs/: index.md
docs/.styles/config/vocabularies/Aineko/: accept.txt
docs/datasets/: postgres.md
docs/nodes/: fastapi-server.md  http-poller.md  websocket-client.md
docs/stylesheets/: extra.css
fix-names/: 404.html  index.html  sitemap.xml
fix-names/nodes/fastapi-server/: index.html
fix-names/nodes/http-poller/: index.html
fix-names/nodes/websocket-client/: index.html
fix-names/search/: search_index.json
nodes/aineko-plugins-nodes-fastapi-server/: README.md  pyproject.toml
nodes/aineko-plugins-nodes-fastapi-server/aineko_plugins/nodes/fastapi_server/: __init__.py  main.py
nodes/aineko-plugins-nodes-fastapi-server/tests/: main.py  test_fastapi.py  test_fastapi.yml
nodes/aineko-plugins-nodes-http-poller/: README.md  pyproject.toml
nodes/aineko-plugins-nodes-http-poller/aineko_plugins/nodes/http_poller/: __init__.py  http_poller.py
nodes/aineko-plugins-nodes-http-poller/tests/: test_http_poller.py  test_http_poller.yml
nodes/aineko-plugins-nodes-websocket-client/: README.md  pyproject.toml
nodes/aineko-plugins-nodes-websocket-client/aineko_plugins/nodes/websocket_client/: websocket_client.py
nodes/aineko-plugins-nodes-websocket-client/tests/: test_websocket_client.py  test_websocket_client.yml
tests/: conftest.py
