[tool.poetry]
name = "aineko-plugins-nodes-http-poller"
version = "0.0.1"
description = "Aineko plugin for running a HTTP poller."
authors = ["Convex Labs <engineering-admins@convexlabs.xyz>"]

license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "aineko_plugins/nodes/http_poller", from = "." }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
aineko = { version = "^0.3.0" }
requests = { version = "^2.31.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
