[tool.poetry]
name = "aineko-plugins-websocket-client"
version = "0.0.1"
description = "Aineko plugin for running a WebSocket client"
authors = ["Convex Labs <engineering-admins@convexlabs.xyz>"]

license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "aineko_plugins/nodes/websocket_client", from = "." }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
# aineko = { version = "^0.2.7" }
aineko = { path = "../../aineko", develop = true }

websocket-client = { version = "^1.7.0" }
websockets = { version = "^12.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
aineko = { path = "../../aineko", develop = true }
