[tool.poetry]
name = "aineko-plugins-datasets-postgres"
version = "0.0.1"
description = "Aineko plugin for interacting with PostgreSQL datasets"
authors = ["Convex Labs <engineering-admins@convexlabs.xyz>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://aineko.dev"
repository = "https://github.com/aineko-dev/aineko-plugins/tree/develop/datasets/aineko-plugins-datasets-postgres"
documentation = "https://plugin-docs.aineko.dev/dev/datasets/postgres"
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
]
packages = [{ include = "aineko_plugins/datasets/postgres", from = "." }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
# aineko = { path = "../../../aineko", develop = true }
aineko = { branch = "feat/async-abstract-dataset", git = "git@github.com:aineko-dev/aineko.git" }
boto3 = { version = "^1.34.30" }
boto3-stubs = "^1.34.40"
mypy-boto3-rds = "^1.34.30"
psycopg = { extras = ["binary", "pool"], version = "^3.1.18" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
