[tool.poetry]
name = "aineko-plugins-nodes-fastapi-server"
version = "0.0.1"
description = "Aineko plugins for running a FastAPI server"
authors = ["Convex Labs <engineering-admins@convexlabs.xyz>"]

license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "aineko_plugins/nodes/fastapi_server", from = "." }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
aineko = { version = "^0.3.0" }
uvicorn = { version = "^0.22", extras = ["standard"] }
fastapi = { version = "~0.109.2" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
