[tool.poetry]
name = "aineko-plugins-nodes-fastapi-server"
version = "0.0.3"
description = "Aineko plugin for running a FastAPI server"
authors = ["Convex Labs <engineering-admins@convexlabs.xyz>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://aineko.dev"
repository = "https://github.com/aineko-dev/aineko-plugins/tree/develop/nodes/aineko-plugins-nodes-fastapi-server"
documentation = "https://plugin-docs.aineko.dev/dev/nodes/fastapi-server"
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
]
packages = [{ include = "aineko_plugins/nodes/fastapi_server", from = "." }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
aineko = { version = "^0.4" }
uvicorn = { version = "^0.22", extras = ["standard"] }
fastapi = { version = "~0.109.2" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
