[tool.poetry]
name = "aineko-plugins-nodes-websocket-client"
version = "0.0.3"
description = "Aineko plugin for running a WebSocket client"
authors = ["Convex Labs <engineering-admins@convexlabs.xyz>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://aineko.dev"
repository = "https://github.com/aineko-dev/aineko-plugins/tree/develop/nodes/aineko-plugins-nodes-websocket-client"
documentation = "https://plugin-docs.aineko.dev/dev/nodes/websocket-client"
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
]
packages = [{ include = "aineko_plugins/nodes/websocket_client", from = "." }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
aineko = { version = "^0.4" }
websocket-client = { version = "^1.7.0" }
websockets = { version = "^12.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
